--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -3,6 +3,6 @@ database.url = jdbc:mysql://localhost:3306/company
 database.root = root
 database.password =
 
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto = update
 hibernate.show_sql = true 
